force-app/main/default/objects/BLN_ARPInheritanceBehaviour__mdt/BLN_ARPInheritanceBehaviour__mdt.object-meta.xml
<CustomObject>
    <label>ARP Inheritance Behaviour</label>
    <pluralLabel>ARP Inheritance Behaviours</pluralLabel>
</CustomObject>