force-app/main/default/objects/BLN_ARPInheritanceBehaviour__mdt/fields/BLN_ARPRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>BLN_ARPRecordTypeName__c</fullName>
    <label>ARP RecordType Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>