force-app/main/default/objects/BLN_ARPInheritanceBehaviour__mdt/fields/BLN_FieldList__c.field-meta.xml
<CustomField>
    <fullName>BLN_FieldList__c</fullName>
    <description>Add Fields API Names, separated by comma(,)</description>
    <label>Field List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>