force-app/main/default/objects/BLN_ARPInheritanceBehaviour__mdt/fields/BLN_InheritanceBehaviour__c.field-meta.xml
<CustomField>
    <fullName>BLN_InheritanceBehaviour__c</fullName>
    <label>Inheritance Behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lowest Level</fullName>
                <default>true</default>
                <label>Lowest Level</label>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Sum with Lowest Level Precedence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>